[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aotools"
description = "A set of useful functions for Adaptive Optics in Python"
readme = {file = "README.rst", content-type = "text/x-rst"}
license = {text = "LGPL-3.0"}
authors = [
    {email = "andrewpaulreeves@gmail.com"},
    {email = "matthew.townson@northumbria.ac.uk"},
]
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "numpy>=1.26.2",
    "scipy>=1.11.3",
    "matplotlib>=3.8",
    "numba>=0.59",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/AOtools/aotools"

[tool.setuptools.packages.find]
exclude = ["test*", "doc*"]

[tool.setuptools_scm]
version_file = "aotools/_version.py"
